crates/musa-render/tests/snapshots/plan__invention.snap
---
source: crates/musa-render/tests/plan.rs
expression: "format!(\"{rendered:#?}\")"
---
NotationPlan {
    front: FrontMatter {
        title: "Little Invention",
        subtitle: None,
        composer: None,
        arranger: None,
        copyright: None,
    },
    staves: [
        StaffPlan {
            name: "piano",
            clef: Some(
                Treble,
            ),
            key: Some(
                KeySignature {
                    fifths: 0,
                    mode: Major,
                },
            ),
            time_signature: (
                4,
                4,
            ),
            measures: [
                MeasurePlan {
                    number: 1,
                    lanes: [
                        VoiceLane {
                            voice: VoiceId(
                                0,
                            ),
                            name: "right",
                            items: [
                                NotatedItem {
                                    event: EventId(
                                        0,
                                    ),
                                    kind: Note {
                                        pitch: WrittenPitch {
                                            letter: C,
                                            accidental: Accidental(
                                                0,
                                            ),
                                            octave: 4,
                                        },
                                    },
                                    onset_in_measure: MusicalDuration(
                                        Ratio {
                                            numer: 0,
                                            denom: 1,
                                        },
                                    ),
                                    duration: NotatedDuration {
                                        value: MusicalDuration(
                                            Ratio {
                                                numer: 1,
                                                denom: 4,
                                            },
                                        ),
                                        spelling: "1/4",
                                        pieces: [
                                            MusicalDuration(
                                                Ratio {
                                                    numer: 1,
                                                    denom: 4,
                                                },
                                            ),
                                        ],
                                    },
                                    tie: none,
                                    beam: None,
                                    tuplet: None,
                                    slur: none,
                                    phrase: None,
                                    hairpin: None,
                                    dynamic: None,
                                    articulations: [],
                                },
                                NotatedItem {
                                    event: EventId(
                                        1,
                                    ),
                                    kind: Note {
                                        pitch: WrittenPitch {
                                            letter: D,
                                            accidental: Accidental(
                                                0,
                                            ),
                                            octave: 4,
                                        },
                                    },
                                    onset_in_measure: MusicalDuration(
                                        Ratio {
                                            numer: 1,
                                            denom: 4,
                                        },
                                    ),
                                    duration: NotatedDuration {
                                        value: MusicalDuration(
                                            Ratio {
                                                numer: 1,
                                                denom: 4,
                                            },
                                        ),
                                        spelling: "1/4",
                                        pieces: [
                                            MusicalDuration(
                                                Ratio {
                                                    numer: 1,
                                                    denom: 4,
                                                },
                                            ),
                                        ],
                                    },
                                    tie: none,
                                    beam: None,
                                    tuplet: None,
                                    slur: none,
                                    phrase: None,
                                    hairpin: None,
                                    dynamic: None,
                                    articulations: [],
                                },
                                NotatedItem {
                                    event: EventId(
                                        2,
                                    ),
                                    kind: Note {
                                        pitch: WrittenPitch {
                                            letter: E,
                                            accidental: Accidental(
                                                0,
                                            ),
                                            octave: 4,
                                        },
                                    },
                                    onset_in_measure: MusicalDuration(
                                        Ratio {
                                            numer: 1,
                                            denom: 2,
                                        },
                                    ),
                                    duration: NotatedDuration {
                                        value: MusicalDuration(
                                            Ratio {
                                                numer: 1,
                                                denom: 4,
                                            },
                                        ),
                                        spelling: "1/4",
                                        pieces: [
                                            MusicalDuration(
                                                Ratio {
                                                    numer: 1,
                                                    denom: 4,
                                                },
                                            ),
                                        ],
                                    },
                                    tie: none,
                                    beam: None,
                                    tuplet: None,
                                    slur: none,
                                    phrase: None,
                                    hairpin: None,
                                    dynamic: None,
                                    articulations: [],
                                },
                                NotatedItem {
                                    event: EventId(
                                        3,
                                    ),
                                    kind: Note {
                                        pitch: WrittenPitch {
                                            letter: F,
                                            accidental: Accidental(
                                                0,
                                            ),
                                            octave: 4,
                                        },
                                    },
                                    onset_in_measure: MusicalDuration(
                                        Ratio {
                                            numer: 3,
                                            denom: 4,
                                        },
                                    ),
                                    duration: NotatedDuration {
                                        value: MusicalDuration(
                                            Ratio {
                                                numer: 1,
                                                denom: 4,
                                            },
                                        ),
                                        spelling: "1/4",
                                        pieces: [
                                            MusicalDuration(
                                                Ratio {
                                                    numer: 1,
                                                    denom: 4,
                                                },
                                            ),
                                        ],
                                    },
                                    tie: none,
                                    beam: None,
                                    tuplet: None,
                                    slur: none,
                                    phrase: None,
                                    hairpin: None,
                                    dynamic: None,
                                    articulations: [],
                                },
                            ],
                            slurs: [],
                            phrases: [],
                            hairpins: [],
                        },
                    ],
                },
                MeasurePlan {
                    number: 2,
                    lanes: [
                        VoiceLane {
                            voice: VoiceId(
                                0,
                            ),
                            name: "right",
                            items: [
                                NotatedItem {
                                    event: EventId(
                                        4,
                                    ),
                                    kind: Note {
                                        pitch: WrittenPitch {
                                            letter: G,
                                            accidental: Accidental(
                                                0,
                                            ),
                                            octave: 4,
                                        },
                                    },
                                    onset_in_measure: MusicalDuration(
                                        Ratio {
                                            numer: 0,
                                            denom: 1,
                                        },
                                    ),
                                    duration: NotatedDuration {
                                        value: MusicalDuration(
                                            Ratio {
                                                numer: 1,
                                                denom: 2,
                                            },
                                        ),
                                        spelling: "1/2",
                                        pieces: [
                                            MusicalDuration(
                                                Ratio {
                                                    numer: 1,
                                                    denom: 2,
                                                },
                                            ),
                                        ],
                                    },
                                    tie: none,
                                    beam: None,
                                    tuplet: None,
                                    slur: none,
                                    phrase: None,
                                    hairpin: None,
                                    dynamic: None,
                                    articulations: [],
                                },
                                NotatedItem {
                                    event: EventId(
                                        5,
                                    ),
                                    kind: Note {
                                        pitch: WrittenPitch {
                                            letter: A,
                                            accidental: Accidental(
                                                0,
                                            ),
                                            octave: 4,
                                        },
                                    },
                                    onset_in_measure: MusicalDuration(
                                        Ratio {
                                            numer: 1,
                                            denom: 2,
                                        },
                                    ),
                                    duration: NotatedDuration {
                                        value: MusicalDuration(
                                            Ratio {
                                                numer: 1,
                                                denom: 4,
                                            },
                                        ),
                                        spelling: "1/4",
                                        pieces: [
                                            MusicalDuration(
                                                Ratio {
                                                    numer: 1,
                                                    denom: 4,
                                                },
                                            ),
                                        ],
                                    },
                                    tie: none,
                                    beam: None,
                                    tuplet: None,
                                    slur: none,
                                    phrase: None,
                                    hairpin: None,
                                    dynamic: None,
                                    articulations: [],
                                },
                                NotatedItem {
                                    event: EventId(
                                        6,
                                    ),
                                    kind: Note {
                                        pitch: WrittenPitch {
                                            letter: B,
                                            accidental: Accidental(
                                                0,
                                            ),
                                            octave: 4,
                                        },
                                    },
                                    onset_in_measure: MusicalDuration(
                                        Ratio {
                                            numer: 3,
                                            denom: 4,
                                        },
                                    ),
                                    duration: NotatedDuration {
                                        value: MusicalDuration(
                                            Ratio {
                                                numer: 1,
                                                denom: 4,
                                            },
                                        ),
                                        spelling: "1/4",
                                        pieces: [
                                            MusicalDuration(
                                                Ratio {
                                                    numer: 1,
                                                    denom: 4,
                                                },
                                            ),
                                        ],
                                    },
                                    tie: none,
                                    beam: None,
                                    tuplet: None,
                                    slur: none,
                                    phrase: None,
                                    hairpin: None,
                                    dynamic: None,
                                    articulations: [],
                                },
                            ],
                            slurs: [],
                            phrases: [],
                            hairpins: [],
                        },
                    ],
                },
            ],
        },
    ],
    tempos: [
        PositionedMark {
            measure: 1,
            onset_in_measure: MusicalDuration(
                Ratio {
                    numer: 0,
                    denom: 1,
                },
            ),
            what: TempoText {
                beat: Ratio {
                    numer: 1,
                    denom: 4,
                },
                bpm: 96,
            },
        },
    ],
    sections: [],
    harmony: [],
    repeats: [],
}
